--- a/Go_Day06-0/src/ex01/public/html/startPage.html
+++ b/Go_Day06-0/src/ex01/public/html/startPage.html
@@ -94,7 +94,7 @@
 <div class="container">
 	{{ range .Posts }}
 	<div>
-		<div class="created">{{ .Created }}</div>
+		<div class="userLogin">{{ .UserLogin }} {{ .Created }}</div>
 		<div class="header">{{ .Header }}</div>
 		<div class="content">{{ .Content }}</div>
 	</div>
